# SmartShopPlatform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Project_Plan.md  TODO.md
src/apps/account/: apps.py  enums.py  managers.py  models.py  signals.py
src/apps/account/auth/: authentication.py  permissions.py  utils.py
src/apps/account/migrations/: 0001_initial.py
src/apps/account/tests/: factories.py  test_authenticaton.py  test_models.py  test_permissions.py
src/apps/core/: exceptions.py  models.py  redis_utils.py  serializers.py  text.py  utils.py  validators.py
src/apps/core/swagger/: mixins.py
src/apps/core/views/: mixins.py
src/config/: settings.py  urls.py
src/config/settings/: __init__.py  base.py  dev.py  prod.py
